<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Choose one of the features below.</string>

    <string name="app_name">AGRIBOT</string>
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Real-Time</string>
    <string name="title_feature2">Photo Capture</string>
    <string name="title_feature3">Set PhotoCapture</string>
    
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    
    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
     
 <string-array name="classifier_names">
        <item>XKCD color survey</item>
        <item>X11</item>
        <item>Resene</item>
    </string-array>
    <string-array name="classifier_ids">
        <item>xkcd.dat</item>
        <item>x11.dat</item>
        <item>resene.dat</item>
    </string-array>
    <string-array name="estimator_names">
        <item>Single pixel</item>
        <item>Average from central area</item>
    </string-array>
    <string-array name="estimator_ids">
        <item>com.agribot.colorrecognition.SimpleEstimator</item>
        <item>com.agribot.colorrecognition.FlatRectEstimator</item>
    </string-array>

</resources>
