<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="0.67"
            android:src="@drawable/agribot" />

        <Button
            android:id="@+id/AgribotRealtime"
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/agribot" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

          <Button
                android:id="@+id/AgribotRealtime"
                style="@style/HomeButton"
                android:drawableTop="@drawable/agribot_realtime"
                android:onClick="onClickFeature"
                android:text="@string/title_feature1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            

            <Button
                android:id="@+id/AgribotPhotoCapture"
                style="@style/HomeButton"
                android:layout_width="308dp"
                android:drawableTop="@drawable/photocapture"
                android:onClick="onClickFeature"
                android:text="@string/title_feature2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/setPhotoCapture"
                style="@style/HomeButton"
                android:drawableTop="@drawable/automaticcapture"
                android:onClick="onClickFeature"
                android:text="@string/title_feature3" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>